# pream-team

./: .pylintrc  LICENSE  README.md  pyproject.toml  team-prs.py
.github/workflows/: pylint.yml
src/pream_team/: __init__.py  __main__.py  cache_manager.py  github_pr_fetcher.py  pream_team_app.py  pream_team_ui.py
test/: github_pr_fetcher_test.py
