[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pream_team"]

[project.scripts]
pream-team = "pream_team.__main__:main"

[project]
name = "pream-team"
version = "1.3.0"
authors = [
  { name="Nikola Dućak", email="nikola.duca@gmail.com" },
]
description = "PReam-Team is a TUI utility that lists out open GitHub PRs for your team."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.7.4",
    "urwid>=2.1.2",
    "PyYAML>=5.4"
]


[project.urls]
Homepage = "https://github.com/nikoladucak/pream-team"
Issues = "https://github.com/nikoladucak/pream-team"
